Add default ROLE_USER authority